# ocaml-99-problems

./: .ocamlformat  README.md  dune-project  ocaml_99_problems.opam
.github/workflows/: test.yml
lib/: dune  ocaml_99_problems.ml
test/: dune  ocaml_99_problems.ml
