(lang dune 3.11)

(name ocaml_99_problems)

(generate_opam_files true)

(source
 (github andre-dasilva/ocaml-99-problems))

(authors "André da Silva")

(maintainers "André da Silva")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_99_problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
